# aeon

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAG.md  README.md  app.js  bot.py  docker-compose.yml  index.html  marketing.md  monetization.md  railway.toml  styles.css
backend/: alembic.ini  pyproject.toml
backend/app/: agents.py  i18n.py  main.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routes/: __init__.py  agents.py  diary.py  goal.py  me.py
backend/app/bot/: application.py  chat.py  jobs.py  messaging.py  runtime.py  webapp.py
backend/app/bot/handlers/: commands.py  onboarding.py
backend/app/clients/: gemini.py
backend/app/core/: config.py  telegram_auth.py
backend/app/db/: models.py  session.py
backend/app/services/: agent_chat.py  diary.py  goals.py  rag.py  users.py
backend/evals/: aurelius_en_golden.json  aurelius_ru_golden.json  jung_en_golden.json  jung_ru_golden.json  machiavelli_discourses_en_golden.json  machiavelli_ru_golden.json
backend/migrations/: env.py
backend/migrations/versions/: 20260713_add_daily_notification_marker.py  20260713_add_life_weekly_notifications.py  4444640b0e86_initial_schema.py
backend/scripts/: audit_rag_answers.py  build_aurelius_en_rag.py  build_aurelius_rag.py  build_jung_en_rag.py  build_jung_rag.py  build_machiavelli_discourses_en_rag.py  evaluate_rag.py  import_legacy.py  ingest_rag_pdf.py  query_rag.py
backend/tests/: conftest.py  test_api.py  test_bot_jobs.py  test_machiavelli_discourses_builder.py  test_rag.py
frontend/: .env.example  .prettierignore  index.html  (+4 more)
(+26 files in other folders)
